--- a/src/app.css
+++ b/src/app.css
@@ -315,11 +315,14 @@ body {
   padding: 18px 25px;
 }
 
+.pswp--zoom-allowed .pswp__button--zoom,
+.pswp__counter,
+.pswp__preloader,
 .hidden-caption {
   display: none;
 }
 
-.pswp .pswp__button--download-button .pswp__icn {
+.pswp .pswp__button--download-button {
   transform: scale(1.05);
   margin-top: -0.08rem;
 }
