--- a/src/app.css
+++ b/src/app.css
@@ -260,20 +260,11 @@ body {
 }
 
 .b-hero {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-flex: 0;
-  -ms-flex: 0 0 100%;
   flex: 0 0 100%;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
   user-select: none;
   font-size: 22px;
+  gap: 1rem;
 }
 
 @media (min-width: 768px) {
@@ -292,14 +283,6 @@ body {
   .b-hero {
     font-size: 72px;
   }
-}
-
-.b-hero__m {
-  position: absolute;
-  left: 50%;
-  -webkit-transform: translateX(-50%);
-  -o-transform: translateX(-50%);
-  transform: translateX(-50%);
 }
 
 /*! PhotoSwipe */
