--- a/src/app.css
+++ b/src/app.css
@@ -42,9 +42,9 @@
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "" Agipo "", -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-sans-serif: "" Agipo "", -apple-system, BlinkMacSystemFont,
+    "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
     "Liberation Mono", "Courier New", monospace;
 }
@@ -65,19 +65,19 @@ html {
 }
 
 html {
-    font-size: 14px
+  font-size: 14px;
 }
 
 @media (min-width: 992px) {
-    html {
-        font-size:18px
-    }
+  html {
+    font-size: 18px;
+  }
 }
 
 body {
   margin: 0;
-  font-family: "Agipo", -apple-system, BlinkMacSystemFont, Segoe UI,
-    Roboto, Helvetica Neue, Arial, sans-serif;
+  font-family: "Agipo", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Helvetica Neue, Arial, sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -241,20 +241,20 @@ body {
   opacity: 1;
 }
 
-.sp{
+.sp {
   display: none;
 }
 
-.pc{
+.pc {
   display: block;
 }
 
 @media screen and (max-width: 767px) {
-  .sp{
+  .sp {
     display: block;
   }
 
-  .pc{
+  .pc {
     display: none;
   }
 }
@@ -286,6 +286,18 @@ body {
     font-size: 72px;
     gap: 2rem;
   }
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
 }
 
 /*! PhotoSwipe */
