--- a/src/app.css
+++ b/src/app.css
@@ -81,9 +81,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #000;
+  color: #342616;
   text-align: left;
-  background-color: #fff;
+  background-color: #f9f4f1;
   overflow-x: hidden;
 }
 
@@ -131,7 +131,7 @@ a {
 
 a,
 a:hover {
-  color: #000;
+  color: #342616;
 }
 
 a:hover {
